--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 # Created by https://www.gitignore.io/api/flask,python,jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=flask,python,jupyternotebooks
 
+key.json
 *.h5
 *.npy
-*.env
 
 ### Flask ###
 instance/*
@@ -13,6 +13,7 @@ instance/*
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
+__pycache__/
 __pycache__/
 *.py[cod]
 *$py.class
@@ -68,6 +69,15 @@ coverage.xml
 *.mo
 *.pot
 
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+
 # Scrapy stuff:
 .scrapy
 
@@ -76,6 +86,13 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
 
 # pyenv
 .python-version
@@ -93,17 +110,22 @@ celerybeat-schedule
 # SageMath parsed files
 *.sage.py
 
+# Environments
+*.env
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 # Spyder project settings
 .spyderproject
 .spyproject
 
 # Rope project settings
 .ropeproject
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
 
 # mkdocs documentation
 /site
@@ -120,15 +142,11 @@ dmypy.json
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
 
-.ipynb_checkpoints
 */.ipynb_checkpoints/*
-
-# IPython
-profile_default/
-ipython_config.py
 
 # Remove previous ipynb_checkpoints
 #   git rm -r .ipynb_checkpoints/
+#
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -147,11 +165,19 @@ ipython_config.py
 
 # Translations
 
+# Django stuff:
+
+# Flask stuff:
+
 # Scrapy stuff:
 
 # Sphinx documentation
 
 # PyBuilder
+
+# Jupyter Notebook
+
+# IPython
 
 # pyenv
 
@@ -165,11 +191,11 @@ ipython_config.py
 
 # SageMath parsed files
 
+# Environments
+
 # Spyder project settings
 
 # Rope project settings
-
-# Mr Developer
 
 # mkdocs documentation
 
